# game-of-life-example

./: .gitignore  LICENSE  README.md  gosper-glider-gun.txt  life.py  main.py  model.py  oscillators.txt  pulsar.txt  pyproject.toml  requirements.txt  spaceship2.txt  view_mpl.py  view_opengl.py  view_pygame.py
life/: __init__.py  model.py
life/patterns/: fish.txt  glider.txt  spaceship1.txt
life/view/: mpl.py  opengl.py  pygame.py
